tests/paczka1/fuzzy1/67264078.err
Error in line 4: S763 A458 30,00
Error in line 17: EOYcP A458 77,6
Error in line 9: S763 A458 127,2
Error in line 24: S7YTXZO S763 79,6
